# dotfiles

./: .gitignore  .p10k.zsh  .vimrc  .zshrc  Justfile  README.md  gitconfig  init.lua  init.vim  install.sh  inventory.yaml  p10k.zsh  playbook.yaml  pyproject.toml  requirements.yaml  run.sh  vimrc  zshrc
dotfiles/files/: .p10k.zsh  .zshrc  atuin.toml  init.vim
dotfiles/files/zsh/: alias.zsh  eval.zsh  exports.zsh  functions.zsh  history.zsh  sources.zsh
dotfiles/handlers/: main.yml
dotfiles/tasks/: main.yml
homebrew/defaults/: main.yml
homebrew/tasks/: main.yml
krew/defaults/: main.yml
krew/tasks/: main.yml
zsh/: alias.zsh  eval.zsh  exports.zsh  functions.zsh  sources.zsh
