[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Evan Van Dam <evandam92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible-core = "^2.16.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
