[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Evan Van Dam <evandam92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^9.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ansible-lint = { version = "^6.22.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
